# quantum-computing-lab

./: .gitignore  .pre-commit-config.yaml  LICENSE  PROJECT_CHARTER.md  README.md  pyproject.toml  requirements.txt
academy/: README.md
academy/assessments/: README.md
academy/certification/: README.md
academy/curriculum/: README.md
academy/curriculum/advanced/: README.md
academy/curriculum/beginner/: README.md
academy/curriculum/beginner/00_welcome/: README.md
academy/curriculum/beginner/01_mathematics_foundations/: README.md
academy/curriculum/beginner/02_quantum_mechanics_for_developers/: README.md
academy/curriculum/beginner/03_qubits/: README.md
academy/curriculum/beginner/04_single_qubit_gates/: README.md
academy/curriculum/beginner/05_measurement/: README.md
academy/curriculum/beginner/06_multiple_qubits/: README.md
academy/curriculum/beginner/07_bell_states/: README.md
academy/curriculum/expert/: README.md
academy/curriculum/research/: README.md
academy/governance/: README.md
academy/instructors/: README.md
academy/learning-model/: README.md  assessment-model.md  difficulty-levels.md  learning-objectives.md  module-lifecycle.md  module-structure.md  progression-model.md  quality-criteria.md
academy/learning-paths/: README.md
academy/roadmap/: README.md
academy/shared/: README.md
academy/shared/assets/: README.md
academy/shared/bibliography/: README.md
academy/shared/glossary/: README.md
academy/shared/references/: README.md
academy/templates/: README.md
benchmarks/: README.md
docs/: README.md
examples/: README.md
projects/: README.md
research/: README.md
src/quantum_computing_lab/: __init__.py
src/quantum_computing_lab/circuits/: bell_state.py
tests/unit/: test_bell_state.py
tools/: README.md
tools/validation/: check_environment.py
